python-openstackdocstheme (1.3.0+dfsg1-1) UNRELEASED; urgency=medium

  * New upstream release
  * Fixed VCS URLs (https).
  * d/rules: Changed UPSTREAM_GIT protocol to https
  * Removed d/p/allow-any-pbr-version.patch (Applied upstream)
  * Rebased d/p/patch-out-external-references.patch
  * Rearranged build depends for new release
  * d/copyright
    - Added Files-Excluded for non-DFSG files
    - Added myself for Debian part
  * Bumped standards version to 3.9.8 (no changes needed)
  * Don't override dh_auto_clean
  * Added libjs-bootstrap and libjs-jquery to dependencies

 -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:42:41 +0100

python-openstackdocstheme (1.2.5+dfsg1-1) unstable; urgency=medium

  * Initial release. (Closes: #807039)

 -- Thomas Goirand <zigo@debian.org>  Mon, 05 Oct 2015 10:48:26 +0200