@@ -12,6 +12,7 @@ python-openstackdocstheme (1.3.0+dfsg1-1) UNRELEASED; urgency=medium
   * Bumped standards version to 3.9.8 (no changes needed)
   * Don't override dh_auto_clean
   * Added libjs-bootstrap and libjs-jquery to dependencies
+  * Symlink Bootstrap and jQuery JS libs during build
 
  -- Ondřej Nový <novy@ondrej.org>  Sun, 28 Feb 2016 15:42:41 +0100
 
